--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
-  "dependencies": {
+  "type": "module",
+  "scripts": {
+    "build": "node esbuild.config.js"
+  },
+  "devDependencies": {
     "autoprefixer": "^10.4.17",
-    "flowbite": "^2.2.1",
-    "postcss": "^8.4.33",
-    "postcss-cli": "^11.0.0",
-    "tailwindcss": "^3.4.1"
+    "esbuild": "^0.23.1",
+    "esbuild-sass-plugin": "^3.3.1",
+    "fs-extra": "^11.2.0",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10"
+  },
+  "dependencies": {
+    "flowbite": "^2.5.1"
   }
 }
