--- a/FlowbiteBlazorWasmStarter.csproj
+++ b/FlowbiteBlazorWasmStarter.csproj
@@ -15,4 +15,8 @@
     <Folder Include="wwwroot\css\" />
   </ItemGroup>
 
+  <Target Name="Tailwind" BeforeTargets="Compile">
+    <Exec Command="npm run build" />
+  </Target>
+
 </Project>
